test/syc/good/initstrp.c
/*
 * Pointer to string literal as initializer.
 */

char *strp = "Hello!";
