test/syc/bad/initcalwstr.c
/*
 * Cannot initialize array of char from wide string.
 */

char a[10] = L"Hello!";
